--- a/master/Makefile
+++ b/master/Makefile
@@ -5,7 +5,7 @@ $(TARGET) : $(OBJECTS)
 	gcc -o $@ print.c $^ -lfl -g
 
 parser.tab.c parser.tab.h : parser.y
-	bison -t -d $^
+	bison -v -t -d $^
 
 lex.yy.c : scanner.l parser.tab.h
 	flex -d $<
